# usma_triclops

./: .gitignore  CMakeLists.txt  README.md  first.astylerc  package.xml  usma_triclops  valgrindOutput.txt
cfg/: bumblebee.cfg  line_filter.cfg  triclops.cfg
docs/: ClassDiagrams_xmi.xml  Design_Notes.txt  usma_triclops.qmodel
include/triclops_vision/: camera_system.h  camera_system.h.orig  image_publisher.h  line_filter.h  line_filter.h.orig  vision_3d.h
include/usma_triclops/: bumblebeecamera.h  camera_system.h  color_filter.h  common.h  image_publisher.h  images_into_triclops.h  line_filter.h  orig_camera_system.h  triclops_opencv.h  typedefs.h  vision3d.h  vision_3d.h  whiteline_filter.h
launch/: bumblebee.launch  threeNodebumblebee.launch  triclops_camera.rviz  triclops_camera2.launch  triclops_rviz.launch
src/: bumblebee_node.cpp  bumblebeecamera.cpp  bumblebeecamera.h  bumblebeemain.cpp  camera_system.cpp  camera_system.cpp.orig  color_filter.cpp  image_publisher.cpp  images_into_triclops.cpp  line_filter.cpp  line_filter.cpp.orig  main.cpp  orig_camera_system.cpp  runme.cpp  runme.cpp.orig  triclops_opencv.cpp  vision3d.cpp  vision3d.h  vision3d_node.cpp  vision_3d.cpp  vision_3d.cpp.orig  whiteline_filter.cpp  whiteline_node.cpp
usma_triclops/: whiteline_filter.h
